--- a/index.html
+++ b/index.html
@@ -681,11 +681,11 @@
                 <form id="emailForm" class="flex flex-col gap-4 max-w-sm">
                     <div class="flex flex-col gap-2 text-sm">
                         <label class="font-[600]">Nombre</label>
-                        <input type="text" id="nombre" placeholder="Tu nombre" class="changeMode-border-form px-4 py-2 pb-2.5 border-1 rounded-lg" />
+                        <input type="text" id="nombre" placeholder="Tu nombre" class="changeMode-border-form px-4 py-2 border-1 rounded-lg" />
                     </div>
                     <div class="flex flex-col gap-2 text-sm">
                         <label class="font-[600]">Correo</label>
-                        <input type="email" id="correo" placeholder="Tu correo" class="changeMode-border-form px-4 py-2 pb-2.5 border-1 rounded-lg" />
+                        <input type="email" id="correo" placeholder="Tu correo" class="changeMode-border-form px-4 py-2 border-1 rounded-lg" />
                     </div>
                     <div class="flex flex-col gap-2 text-sm">
                         <label class="font-[600]">Mensaje</label>
