--- a/index.html
+++ b/index.html
@@ -771,9 +771,10 @@
         </footer>
     </div>
 
-    <script src="./src/js/main.js"></script>
     <script src="./src/js/p5.min.js"></script>
+    <script src="./src/js/three.min.js"></script>
     <script src="./src/js/vanta.topology.min.js"></script>
+    <script src="./src/js/main.js"></script>
 </body>
 
 </html>
