--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                         <textarea id="mensaje" placeholder="Escribe tu mensaje aquí..." class="auto-resize changeMode-border-form px-4 py-2 border-1 rounded-lg" oninput="autoResize(this)"></textarea>
                     </div>
                     <button type="button" onclick="sendEmail()" class="custom-margin-top changeMode-hover-bg changeMode-border-form flex justify-center items-center w-fit px-4 py-3 mt-4 gap-2 border-1 rounded-lg cursor-pointer">
-                        <svg class="w-4.5 mt-[2.5px]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <svg class="w-4.5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M6 12 3.269 3.125A59.769 59.769 0 0 1 21.485 12 59.768 59.768 0 0 1 3.27 20.875L5.999 12Zm0 0h7.5" />
                         </svg>
                         <p class="text-sm">Enviar mensaje</p>
