--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
     </header>
 
-    <div class="flex justify-center items-center h-dvh max-h-dvh min-h-[489px] relative overflow-hidden">
+    <div class="flex justify-center items-center h-dvh max-h-dvh min-h-[700px] relative overflow-hidden">
         <div id="mainFondo" class="h-full w-full absolute inset-0 bg-cover bg-center z-[-1]"></div>
 
         <div class="changeMode changeMode-shadow flex flex-col relative w-dvw max-w-5xl px-4 sm:px-6 lg:px-8 py-12 mt-18 custom-m-container gap-6 rounded-0 sm:rounded-xl font-inter z-10 opacity-0 animate-fadeIn">
@@ -285,7 +285,7 @@
                 </button>
             </div>
             <div class="flex justify-start flex-wrap sm:flex-nowrap gap-6">
-                <div class="flex flex-col justify-start flex-1 min-w-[284px] p-2 gap-2 border-1 rounded-2xl cursor-pointer changeMode-border changeMode-hover-bg">
+                <a href="https://www.behance.net/gallery/228730819/Tienda-X" target="_blank" rel="noopener noreferrer" class="flex flex-col justify-start flex-1 min-w-[284px] p-2 gap-2 border-1 rounded-2xl cursor-pointer changeMode-border changeMode-hover-bg">
                     <div class="w-full">
                         <img class="rounded-xl" src="./src/assets/img/proyecto_tienda1.png" loading="lazy" alt="Portafolio de Pedro Benitez" />
                     </div>
@@ -302,11 +302,8 @@
                             </div>
                         </div>
                         <div class="flex flex-col justify-center relative gap-4">
-                            <div class="text-sm" onclick="toggleText(this)">
-                                <span id="desc" class="clamp-text inline">
-                                    Diseñé y desarrollé una plataforma de comercio electrónico con panel de administración y catálogo de productos. Me enfoqué en accesibilidad, estructura visual clara y experiencia fluida
-                                </span>
-                                <span id="seeMore" class="seeMore cursor-pointer changeMode-back-text">ver más</span>
+                            <div class="text-sm">
+                                <span>Diseñé y desarrollé una plataforma de comercio electrónico con panel de administración y catálogo de productos. Me enfoqué en accesibilidad, estructura visual clara y experiencia fluida</span>
                             </div>
                             <div class="flex justify-between items-center">
                                 <div class="flex items-center text-[12px] gap-3">
@@ -318,8 +315,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="flex flex-col justify-start flex-1 min-w-[284px] p-2 gap-2 border-1 rounded-2xl cursor-pointer changeMode-border changeMode-hover-bg">
+                </a>
+                <a href="https://www.behance.net/gallery/228731233/Gestor-Karaoke" target="_blank" rel="noopener noreferrer" class="flex flex-col justify-start flex-1 min-w-[284px] p-2 gap-2 border-1 rounded-2xl cursor-pointer changeMode-border changeMode-hover-bg">
                     <div class="w-full">
                         <img class="rounded-xl" src="./src/assets/img/proyecto_karaoke1.png" loading="lazy" alt="Portafolio de Pedro Benitez" />
                     </div>
@@ -336,10 +333,8 @@
                             </div>
                         </div>
                         <div class="flex flex-col justify-center gap-4">
-                            <div class="text-sm" onclick="toggleText(this)">
-                                <span id="desc" class="clamp-text inline">
-                                    Creé una solución web para que los usuarios pudieran registrarse y enviar canciones a una plataforma de tipo karaoke. Priorizando la simplicidad en la interacción y claridad en la interfaz                                </span>
-                                <span id="seeMore" class="seeMore cursor-pointer changeMode-back-text">ver más</span>
+                            <div class="text-sm">
+                                <span>Creé una solución web para que los usuarios pudieran registrarse y enviar canciones a una plataforma de tipo karaoke. Priorizando la simplicidad en la interacción y claridad en la interfaz</span>                                
                             </div>                            
                             <div class="flex justify-between items-center">
                                 <div class="flex items-center text-[12px] gap-3">
@@ -351,7 +346,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
 
@@ -703,7 +698,7 @@
                         <svg class="w-5 aspect-square" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3" />
                         </svg>                          
-                        <h1 class="mb-[1px] text-base font-[600]">Conecta conmigo</h1>
+                        <h1 class="mb-[1px] text-base font-[600]">Contacta conmigo</h1>
                     </div>
                     <div class="flex flex-wrap gap-4">
                         <a href="https://github.com/ByOswaldo65" class="changeMode-border changeMode-hover-bg flex w-fit px-4 py-3 pb-3.5 gap-4 border-1 rounded-lg">
