--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Portafolio de Pedro Oswaldo, desarrollador frontend especializado en diseño de interfaces accesibles, intuitivas y modernas.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Portafolio de Pedro Benitez | Desarrollador Junior</title>
+
+    <!-- Icono de la pestaña del navegador -->
     <link rel="icon" href="./src/assets/img/logo.png" type="image/png" />
-    <title>Portafolio de Pedro Benitez | Desarrollador Frontend</title>
+
+    <!-- Google Fonts: Inter (400, 700) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Estilos CSS del sitio web -->
     <link rel="stylesheet" href="./src/styles/mainStyle.css">
-    <link rel="stylesheet" href="./src/styles/customSwitch.css">
     <link rel="stylesheet" href="./src/styles/loader.css">
+    <link rel="stylesheet" href="./src/styles/customSwitch.css">
+
+    <!-- Tailwind para usar los estilos -->
     <script src="./src/js/tailwindcss.js"></script>
 </head>
 
@@ -27,7 +40,7 @@
         </div>
     </div>
 
-    <button id="btnToTop" onclick="scrollToTop()" class="changeMode changeMode-border-form changeMode-hover-bg opacity-0 pointer-events-none fixed right-3 bottom-3 sm:right-6 sm:bottom-6 p-3 border-1 rounded-full cursor-pointer transition-opacity duration-300 z-50">
+    <button id="btnToTop" onclick="scrollToTop()" aria-label="Volver a Inicio" class="changeMode changeMode-border-form changeMode-hover-bg opacity-0 pointer-events-none fixed right-3 bottom-3 sm:right-6 sm:bottom-6 p-3 border-1 rounded-full cursor-pointer transition-opacity duration-300 z-50">
         <svg class="w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 18.75 7.5-7.5 7.5 7.5" />
             <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 7.5-7.5 7.5 7.5" />
@@ -42,30 +55,30 @@
             </div>
 
             <nav class="flex justify-center items-center max-w-fit gap-0 text-md custom-w changeMode">
-                <a href="#" class="px-4 py-2 rounded-md custom-p-icon custom-hidden-icon changeMode-hover-bg">
+                <a href="#" aria-label="Ir a Inicio" class="px-4 py-2 rounded-md custom-p-icon custom-hidden-icon changeMode-hover-bg">
                     <svg class="w-6 custom-hidden-icon aspect-square" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
                     </svg>                                    
                 </a>
-                <a href="#mainContainer" class="px-4 py-2 rounded-md custom-p-icon changeMode-hover-bg">
+                <a href="#mainContainer" aria-label="Ir a Sobre Mí" class="px-4 py-2 rounded-md custom-p-icon changeMode-hover-bg">
                     <p class="custom-hidden">Sobre mí</p>
                     <svg class="w-6 custom-hidden-icon aspect-square" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
                     </svg>
                 </a>
-                <a href="#mainProject" class="px-4 py-2 rounded-md custom-p-icon changeMode-hover-bg">
+                <a href="#mainProject" aria-label="Ir a Proyectos" class="px-4 py-2 rounded-md custom-p-icon changeMode-hover-bg">
                     <p class="custom-hidden">Proyectos</p>
                     <svg class="w-6 custom-hidden-icon aspect-square" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 0 0 .75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 0 0-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0 1 12 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 0 1-.673-.38m0 0A2.18 2.18 0 0 1 3 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 0 1 3.413-.387m7.5 0V5.25A2.25 2.25 0 0 0 13.5 3h-3a2.25 2.25 0 0 0-2.25 2.25v.894m7.5 0a48.667 48.667 0 0 0-7.5 0M12 12.75h.008v.008H12v-.008Z" />
                     </svg>
                 </a>
-                <a href="#mainContact" class="px-4 py-2 mr-2 rounded-md custom-p-icon changeMode-hover-bg">
+                <a href="#mainContact" aria-label="Ir a Contacto" class="px-4 py-2 mr-2 rounded-md custom-p-icon changeMode-hover-bg">
                     <p class="custom-hidden">Contacto</p>
                     <svg class="w-6 custom-hidden-icon aspect-square" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3" />
                     </svg>
                 </a>
-                <button id="btnConfig" class="pl-2 border-l-1 cursor-pointer changeMode-border">
+                <button id="btnConfig" aria-label="Configuración" class="pl-2 border-l-1 cursor-pointer changeMode-border">
                     <svg class="min-w-11 min-h-11 aspect-square p-2 rounded-md changeMode-hover-bg" xmlns="http://www.w3.org/2000/svg"
                         fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -77,7 +90,7 @@
 
             <div id="menuChange" class="changeMode changeMode-shadow custom-mb-menuChange flex flex-col absolute top-full right-0 p-6 mt-[17px] gap-4 rounded-xl z-40 transition-[max-height,opacity] duration-200 overflow-hidden max-h-0 display-none opacity-0 pointer-events-none custom-positon-modeMenu">
                 <div class="flex justify-end items-center pb-4 border-b-1 changeMode-border">
-                    <button id="btnConfig" class="flex justify-center items-center cursor-pointer">
+                    <button id="btnConfig" aria-label="Cambiar Apariencia" class="flex justify-center items-center cursor-pointer">
                         <svg class="min-w-7 min-h-7 p-1 pt-[5px] pr-[5px] mr-2 rounded-md changeMode-hover-bg"
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor">
@@ -88,7 +101,7 @@
                 </div>
                 <div class="flex justify-between items-center pb-4 border-b-1 changeMode-border">
                     <p class="text-sm">Modo oscuro</p>
-                    <label onchange="changeMode()" id="btnModeChange" class="switch">
+                    <label for="ckbMode" id="btnModeChange" class="switch" onchange="changeMode()">
                         <input id="ckbMode" type="checkbox">
                         <span class="slider flex justify-between items-center px-2">
                             <div class="sun">
@@ -766,10 +779,16 @@
         </footer>
     </div>
 
-    <script src="./src/js/p5.min.js"></script>
-    <script src="./src/js/three.min.js"></script>
-    <script src="./src/js/vanta.topology.min.js"></script>
-    <script src="./src/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.min.js"
+        integrity="sha384-KuaSButcSBcmbzC19JLv+LljKIziQQ7lTOUg37f83huBz49+tWag9p61U1SONpzA"
+        crossorigin="anonymous"
+        defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.154.0/build/three.min.js"
+        integrity="sha384-AzA44jlyVWma8eiYiADgpKxzsQuDwVvJpS/NE2QVxr8MP99cuGzxhKWZM09B14ih"        
+        crossorigin="anonymous" 
+        defer></script>
+    <script src="./src/js/vanta.topology.min.js" defer></script>
+    <script src="./src/js/main.js" defer></script>
 </body>
 
 </html>
